# raytracer

./: .gitignore  CMakeLists.txt  README.md  raytracer.cpp
include/: SGE.hpp  sge_camera.hpp  sge_canvas.hpp  sge_color.hpp  sge_light.hpp  sge_raytracer.hpp  sge_scene.hpp  sge_sphere.hpp  sge_vector.hpp
source/: CMakeLists.txt  sge_camera.cpp  sge_canvas.cpp  sge_color.cpp  sge_light.cpp  sge_raytracer.cpp  sge_scene.cpp  sge_sphere.cpp  sge_vector.cpp
tests/: CMakeLists.txt  test_color.cpp
